--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
@@ -21,7 +22,8 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.7.5",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
