--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,25 @@
 version: '3'
 services:
   app: 
-    container_name: docker-node-mongo
+    container_name: dadaeats_docker
     # image: dadaeats_app
     restart: always
     build: .
     environment:
       - MONGODB_URI=mongodb://mongo:27017/Dadaeats
+      - host_name=hello_lily
     ports:
       - '80:5000'
     links:
       - mongo
+    volumes:
+      - "/Users/jalinwu/Desktop/development/DadaEats:/usr/src/app"
   mongo:
-    container_name: mongo
+    container_name: dadaeats_mongo
     image: mongo
     ports:
       - '27017:27017'
+    volumes:
+      - mongodata:/data/db
+volumes:
+  mongodata:
